# pypix2svg

./: README.md  pypix2svg.py  pyproject.toml
.github/workflows/: run-tox.yml
pypix2svg/: pypix2svg.py
