[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypix2svg"
version = "0.1.0"
authors = [{ name = "Nathanael Gentry", email = "nathanael.gentrydb8@gmail.com" }]
description = "Converts the pixels of a raster image to SVG for pixel-perfectness. Best for 8-bit or lower images."
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["reverse-engineering"]
requires-python = ">=3.9"
dependencies = [
    "Pillow>=9.2.0",
]

[project.urls]
homepage = "https://github.com/npjg/pypix2svg"
repository = "https://github.com/npjg/pypix2svg"

[project.scripts]
pypix2svg = "pypix2svg.pypix2svg:main"
